--- a/Mock_Exam_20.10.2020/Mock_Exam_20.10.2020.vcxproj.filters
+++ b/Mock_Exam_20.10.2020/Mock_Exam_20.10.2020.vcxproj.filters
@@ -18,24 +18,24 @@
     <ClCompile Include="Mock_Exam_20.10.2020.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="task_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Login.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="task_3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="task_4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="task_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainMenu.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="task_1.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Login.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="task_2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="task_3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="task_4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
